Fixed Dark Mode toggle

--- a/src/index.css
+++ b/src/index.css
@@ -7,9 +7,13 @@
 		@apply relative tracking-[1px];
 	}
 	ul li::after {
-		@apply content-[''] bg-[#007ced] h-[2px] w-[0%] left-0 -bottom-[-25px] rounded-xl absolute duration-500;
+		@apply content-[''] bg-[#007ced] h-[2px] w-[0%] left-0 -bottom-[-25px] rounded-xl absolute duration-300;
 	}
 	ul li:hover::after {
 		@apply w-[100%];
 	}
 }
+
+* {
+	@apply transition-colors duration-700;
+  }
